--- a/index.html
+++ b/index.html
@@ -19,56 +19,55 @@
       </header>
       <div class="selecao-de-personagens">
         <div class="personagem-grande personagem-jogador-1">
-          <img src="./src/imagens/thor.png" alt="Personagem selecionado jogador 1" id="personagem-jogador-1">
+          <img src="./src/imagens/terry.png" alt="Personagem selecionado jogador 1" id="personagem-jogador-1">
           <div class = "nome"> 
-            <h2 id="nome-jogador-1">Thor</h2>
+            <h2 id="nome-jogador-1">Terry Bogard</h2>
           </div>
         </div>
         
         <ul class="lista-de-personagens">
-          <li class="personagem selecionado" id="thor" data-name="Thor">
+          <li class="personagem selecionado" id="terry" data-name="Terry Bogard">
             <span class="tag">1P</span>
-            <img src="./src/imagens/thor.jpg" alt="Personagem Thor">
+            <img src="./src/imagens/terry.jpg" alt="Personagem Terry Bogard">
           </li>
-          <li class="personagem" id="homem-de-ferro" data-name="Homem de Ferro">
+          <li class="personagem" id="andy" data-name="Andy Bogard">
             <span class="tag">1P</span>
-            <img src="./src/imagens/homem-de-ferro.jpg" alt="Personagem Homem de Ferro">
+            <img src="./src/imagens/andy.jpg" alt="Personagem Andy Bogard">
           </li>
-          <li class="personagem" id="viuva-negra" data-name="Viúva Negra">
+          <li class="personagem" id="joe" data-name="Joe Higashi">
             <span class="tag">1P</span>
-            <img src="./src/imagens/viuva-negra.jpg" alt="Personagem Viúva Negra">
+            <img src="./src/imagens/joe.jpg" alt="Personagem Joe Higashi">
           </li>
-          <li class="personagem" id="hulk" data-name="Hulk">
+          <li class="personagem" id="kim" data-name="Kim Kaphwan">
             <span class="tag">1P</span>
-            <img src="./src/imagens/hulk.jpg" alt="Personagem Hulk">
+            <img src="./src/imagens/kim.jpg" alt="Personagem Kim Kaphwan">
           </li>
-          <li class="personagem" id="capitao-america" data-name="Capitão América">
-            <span class="tag">1P</span>
-            <img src="./src/imagens/capitao-america.jpg" alt="Personagem Capitão América">
+          <li class="logotipo" id="fatalfury" data-name="Fatal Fury">
+            <img src="./src/imagens/fatalfury.jpg" alt="Logotipo Fatal Fury">
           </li>
-          <li class="personagem jogador-2-selecionado" id="ultron" data-name="Ultron">
+          <li class="personagem jogador-2-selecionado" id="geese" data-name="Geese Howard">
             <span class="tag">2P</span>
-            <img src="./src/imagens/ultron.jpg" alt="Personagem Ulton">
+            <img src="./src/imagens/geese.jpg" alt="Personagem Geese Howard">
           </li>
-          <li class="personagem" id="doutor-doom" data-name="Doutor Doom">
+          <li class="personagem" id="billy" data-name="Billy Kane">
             <span class="tag">1P</span>
-            <img src="./src/imagens/doutor-doom.jpg" alt="Personagem Doutor Doom">
+            <img src="./src/imagens/billy.jpg" alt="Personagem Billy Kane">
           </li>
-          <li class="personagem" id="nova" data-name="Nova">
+          <li class="personagem" id="tung" data-name="Tung Fu Rue">
             <span class="tag">1P</span>
-            <img src="./src/imagens/nova.jpg" alt="Personagem Nova">
+            <img src="./src/imagens/tung.jpg" alt="Personagem Tung Fu Rue">
           </li>
-          <li class="personagem" id="fenix" data-name="Fênix">
+          <li class="personagem" id="mai" data-name="Mai Shiranui">
             <span class="tag">1P</span>
-            <img src="./src/imagens/fenix.jpg" alt="Personagem Fênix">
+            <img src="./src/imagens/mai.jpg" alt="Personagem Mai Shiranui">
           </li>
 
         </ul>
         
         <div class="personagem-grande personagem-jogador-2 ">
-          <img src="./src/imagens/ultron.png" alt="Personagem selecionado jogador 2" id="personagem-jogador-2">
+          <img src="./src/imagens/geese.png" alt="Personagem selecionado jogador 2" id="personagem-jogador-2">
           <div class="nome">
-              <h2>Ultron</h2>
+              <h2>Geese Howard</h2>
           </div> 
         </div>
       </div>
